gallery3/gallery3-deployment-nfs.yaml
apiVersion: v1
kind: Service
metadata:
  name: gallery3
  labels:
    app: gallery3
spec:
  ports:
    - port: 80
  selector:
    app: gallery3
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gallery3
  labels:
    app: gallery3
spec:
  selector:
    matchLabels:
      app: gallery3
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gallery3
        tier: frontend
    spec:
      containers:
      - image: bwdutton/gallery3
        name: gallery3
        ports:
        - containerPort: 80
          name: gallery3
        volumeMounts:
        - name: gallery3-persistent-storage
          mountPath: /var/www/var
      volumes:
      - name: gallery3-persistent-storage
        persistentVolumeClaim:
          claimName: gallery3-pv-claim
