gallery3/gallery3-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gallery3
  annotations:
    kubernetes.io/ingress.class: "nginx"    
spec:
  rules:
  - host: gallery3.ittlabb.net
    http:
      paths:
      - path: /
        backend:
          serviceName: gallery3
          servicePort: 80
